<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="campus.tech.kakao.map.viewmodel.SearchActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".view.SearchActivity">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:hint="@string/search_hint"
            android:padding="10dp"
            android:paddingHorizontal="20dp"
            android:transitionName="inputFieldTransition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_X"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/input_search_field"
            app:layout_constraintEnd_toEndOf="@id/input_search_field"
            app:layout_constraintTop_toTopOf="@id/input_search_field" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:transitionName="inputFieldTransition"
            app:layout_constraintBottom_toBottomOf="@id/search_result_recyclerView"
            app:layout_constraintEnd_toEndOf="@id/search_result_recyclerView"
            app:layout_constraintStart_toStartOf="@id/search_result_recyclerView"
            app:layout_constraintTop_toTopOf="@id/search_result_recyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_search_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/search_result_recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_search_field" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_result_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saved_search_recyclerView" />

        <TextView
            android:id="@+id/no_search_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_search_result"
            android:textColor="#737373"
            android:textSize="18sp"
            android:visibility="@{viewModel.uiState.isPlaceListEmpty ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>