<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="savedPlace"
            type="campus.tech.kakao.map.data.SavedPlace"/>

        <variable
            name="listener"
            type="campus.tech.kakao.map.view.OnClickSavedPlaceListener"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:minWidth="100dp"
    android:layout_height="wrap_content"
    android:onClick="@{() -> listener.loadPlace(savedPlace)}"
>

    <ImageView
        android:id="@+id/button_saved_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:onClick="@{() -> listener.deleteSavedPlace(savedPlace)}"/>

    <TextView
        android:id="@+id/saved_place_name"
        app:layout_constraintStart_toEndOf="@id/button_saved_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{savedPlace.name}"
        android:textSize="16sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>