<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/map_background_bottom_sheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="70dp"
    android:orientation="vertical"
...
