...
                android:transitionName="inputFieldTransition"
                app:layout_constraintBottom_toBottomOf="@+id/input_search_field"
                app:layout_constraintEnd_toEndOf="@id/input_search_field"
                app:layout_constraintTop_toTopOf="@id/input_search_field" />

            <com.kakao.vectormap.MapView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
...
